--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
   "type": "library",
   "require": {
     "php": ">=7.0",
-    "yiisoft/yii2": "~2.0.11",
+    "yiisoft/yii2": "~2.0.13",
     "guzzlehttp/guzzle": "~6.0"
   },
   "require-dev": {
     "codeception/codeception": "^2.2",
-    "codeception/verify": "~0.3.1",
-    "codeception/specify": "~0.4.3"
+    "codeception/verify": "^1.0",
+    "codeception/specify": "^1.0"
   },
   "autoload": {
     "psr-4": {
