Update components and minor refactoring

--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,17 @@
   },
   "type": "library",
   "require": {
-    "php": ">=7.2",
+    "php": ">=7.3",
     "yiisoft/yii2": "~2.0.14",
     "guzzlehttp/guzzle": "~6.0"
   },
   "require-dev": {
-    "codeception/codeception": "^3.0",
+    "codeception/codeception": "^4.0",
     "codeception/verify": "^1.0",
-    "codeception/specify": "^1.0"
+    "codeception/specify": "^1.0",
+    "codeception/module-filesystem": "^1.0",
+    "codeception/module-yii2": "^1.0",
+    "codeception/module-asserts": "^1.0"
   },
   "autoload": {
     "psr-4": {
