--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
     }
   ],
   "require": {
-    "php": ">=7.3 <8.0",
-    "yiisoft/yii2": "~2.0.14",
+    "php": ">=8.0",
+    "yiisoft/yii2": "~2.0.41",
     "guzzlehttp/guzzle": "~6.0"
   },
   "require-dev": {
