--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
     "process-timeout": 1800,
     "fxp-asset": {
       "enabled": false
+    },
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true
     }
   },
   "repositories": [
@@ -34,7 +37,7 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.1",
     "yiisoft/yii2": "~2.0.41",
     "guzzlehttp/guzzle": "~6.0"
   },
